Add watcher for keepalived-exporter

--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -23,6 +23,10 @@ watchers:
     repo: gluster/gluster-prometheus
     branch: master
     commit: 97c41e63b47e0fac9d968bc62897d674e3171b67
+  - type: github_commit
+    repo: cafebazaar/keepalived-exporter
+    branch: master
+    commit: 48b851ccf6421bc9e92940f4aae8fd97ad20b44a
   
 
   ########
