Rename elasticsearch 'http' port to 'web'

--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/service.yaml.j2
@@ -10,7 +10,7 @@ spec:
   clusterIP: None
   ports:
     - port: 9200
-      name: http
+      name: web
     - port: 9300
       name: transport
   selector:
