--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/statefulSet.yaml.j2
@@ -28,7 +28,7 @@ spec:
         - containerPort: 9300
           name: transport
         - containerPort: 9200
-          name: http
+          name: web
         - containerPort: 9600
           name: metrics
         securityContext:
