--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/prometheus_exporter/deployment.yaml.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/prometheus_exporter/deployment.yaml.j2
@@ -30,7 +30,7 @@ spec:
         image: "{{ elasticsearch_exporter.container.image }}"
         env:
         - name: "ES_URI"
-          value: "https://{{ elasticsearch.exporter.user }}:{{ elasticsearch.exporter.password }}@{{ elasticsearch.servername }}:9200"
+          value: "https://{{ elasticsearch_exporter.user }}:{{ elasticsearch_exporter.password }}@{{ elasticsearch.servername }}:9200"
         - name: "ES_ALL"
           value: "true"
         - name: "ES_SSL_SKIP_VERIFY"
