--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -370,6 +370,34 @@ watchers:
     excludes:
       - .*(armhf|arm64).*
       - v1\.[0-8]\..*
+  - type: github_tag
+    repo: uken/fluent-plugin-elasticsearch
+    tag: v{{ fluentd.plugins.elasticsearch.version }}
+    includes:
+      - 'v[0-9]+\.[0-9]+\.[0-9]+'
+    excludes:
+      - 'v[1-3]\..*'
+  - type: github_tag
+    repo: bungoume/fluent-plugin-ua-parser
+    tag: v{{ fluentd.plugins.ua_parser.version }}
+    includes:
+      - 'v[0-9]+\.[0-9]+\.[0-9]+'
+    excludes:
+      - 'v0\..*'
+  - type: github_tag
+    repo: ua-parser/uap-core 
+    tag: v{{ fluentd.plugins.uap_core.version }}
+    includes:
+      - v[0-9]+\.[0-9]+\.[0-9]+
+    excludes:
+      - v0\.[0-6]\..*
+  - type: github_tag
+    repo: y-ken/fluent-plugin-geoip
+    tag: v{{ fluentd.plugins.geoip.version }}
+    includes:
+      - v[0-9]+\.[0-9]+\.[0-9]+
+    excludes:
+      - v0\..*
   - type: docker_registry
     repo: {{ kibana.base_image.repo | default('registry-1.docker.io') }}
     image: {{ kibana.base_image.name }}
