--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/deployment.yaml.j2
@@ -43,7 +43,7 @@ spec:
         - --secure-listen-address=:8443
         - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256
         - --upstream=http://127.0.0.1:8081/
-        image: quay.io/coreos/kube-rbac-proxy:v0.4.1
+        image: "{{ kube_state_metrics_rbac_proxy.container.image }}"
         imagePullPolicy: Always
         name: kube-rbac-proxy-main
         ports:
@@ -64,17 +64,17 @@ spec:
           readOnlyRootFilesystem: true
         resources:
           limits:
-            cpu: 20m
-            memory: 40Mi
+            cpu: {{ kube_state_metrics_rbac_proxy.container.limits_cpu }}
+            memory: {{ kube_state_metrics_rbac_proxy.container.limits_memory }}
           requests:
-            cpu: 10m
-            memory: 20Mi
+            cpu: {{ kube_state_metrics_rbac_proxy.container.requests_cpu }}
+            memory: {{ kube_state_metrics_rbac_proxy.container.requests_memory }}
       - args:
         - --logtostderr
         - --secure-listen-address=:9443
         - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256
         - --upstream=http://127.0.0.1:8082/
-        image: quay.io/coreos/kube-rbac-proxy:v0.4.1
+        image: "{{ kube_state_metrics_rbac_proxy.container.image }}"
         imagePullPolicy: Always
         name: kube-rbac-proxy-self
         ports:
@@ -95,11 +95,11 @@ spec:
           readOnlyRootFilesystem: true
         resources:
           limits:
-            cpu: 20m
-            memory: 40Mi
+            cpu: {{ kube_state_metrics_rbac_proxy.container.limits_cpu }}
+            memory: {{ kube_state_metrics_rbac_proxy.container.limits_memory }}
           requests:
-            cpu: 10m
-            memory: 20Mi
+            cpu: {{ kube_state_metrics_rbac_proxy.container.requests_cpu }}
+            memory: {{ kube_state_metrics_rbac_proxy.container.requests_memory }}
       nodeSelector:
         kubernetes.io/os: linux
         capability/general-purpose: 'yes'
