--- a/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/deployment.yaml.j2
@@ -26,6 +26,8 @@ spec:
         ports:
         - containerPort: 24224
           name: fluentd
+        - containerPort: 24231
+          name: metrics
         env:
           - name:  FLUENT_ELASTICSEARCH_HOST
             value: "{{ elasticsearch.servername }}"
