--- a/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/networkPolicies.yaml.j2
@@ -24,3 +24,14 @@ spec:
           podSelector:
             matchLabels:
               {{ fluentbit.labels_def | to_nice_yaml() | indent(14) }}
+    # Allow from prometheus
+    - ports:
+        - port: metrics
+      from:
+        - namespaceSelector:
+            matchLabels:
+              name: {{ prometheus.namespace }}
+          podSelector:
+            matchLabels:
+              {{ prometheus.labels_def | to_nice_yaml() | indent(14) }}
+
