--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -396,6 +396,13 @@ watchers:
     excludes:
       - 'v[1-3]\..*'
   - type: github_tag
+    repo: fluent/fluent-plugin-prometheus
+    tag: v{{ fluentd.plugins.prometheus.version }}
+    includes:
+      - 'v[0-9]+\.[0-9]+\.[0-9]+'
+    excludes:
+      - 'v1\.[0-6]\..*'
+  - type: github_tag
     repo: bungoume/fluent-plugin-ua-parser
     tag: v{{ fluentd.plugins.ua_parser.version }}
     includes:
