--- a/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/deployment.yaml.j2
@@ -53,8 +53,11 @@ spec:
           runAsUser: 999 # fluent
           readOnlyRootFilesystem: true
         readinessProbe:
-          tcpSocket:
-            port: fluentd
+          # Using a tcpSocket on the fluentd port generates TLS errors
+          httpGet:
+            scheme: HTTP
+            path: /metrics
+            port: metrics
           initialDelaySeconds: 3
           periodSeconds: 5
         resources:
@@ -72,6 +75,8 @@ spec:
           mountPath: /fluentd/etc/
         - name: fluentd-includes
           mountPath: /fluentd/etc/conf.d
+        - name: certs-volume
+          mountPath: /fluentd/certs
         - name: cluster-ca-volume
           mountPath: /etc/ssl/cluster/ca.crt
           subPath: ca.crt
@@ -87,6 +92,9 @@ spec:
       - name: fluentd-includes
         configMap:
           name: fluentd-includes
+      - name: certs-volume
+        secret:
+          secretName: fluentd-certs
       - name: cluster-ca-volume
         secret:
           secretName: cluster-ca
