Secure fluent with a shared key

--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/daemonSet.yaml.j2
@@ -39,6 +39,11 @@ spec:
           value: "{{ fluentd.servername }}"
         - name: FLUENT_FLUENTD_PORT
           value: "24224"
+        - name: FLUENT_FLUENTD_SHARED_KEY
+          valueFrom:
+            secretKeyRef:
+              name: fluent-bit-secret
+              key: fluentd_shared_key
         securityContext:
           # Run as root to be able to read host logs
           #runAsNonRoot: true
