--- a/ansible/install_applications/roles/logging-kibana.deploy/app/config/kibana.yml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/config/kibana.yml.j2
@@ -42,6 +42,9 @@ elasticsearch.hosts: [ "https://{{ elasticsearch.servername }}:9200" ]
 # dashboards. Kibana creates a new index if the index doesn't already exist.
 kibana.index: "{{ kibana.elasticsearch.index }}"
 
+# The default application to load.
+#kibana.defaultAppId: "home"
+
 # If your Elasticsearch is protected with basic authentication, these settings provide
 # the username and password that the Kibana server uses to perform maintenance on the Kibana
 # index at startup. Your Kibana users still need to authenticate with Elasticsearch, which
@@ -56,7 +59,8 @@ elasticsearch.password: {{ kibana.elasticsearch.password }}
 #server.ssl.key: /path/to/your/server.key
 
 # Optional settings that provide the paths to the PEM-format SSL certificate and key files.
-# These files validate that your Elasticsearch backend uses the same key files.
+# These files are used to verify the identity of Kibana to Elasticsearch and are required when
+# xpack.security.http.ssl.client_authentication in Elasticsearch is set to required.
 #elasticsearch.ssl.certificate: /path/to/your/client.crt
 #elasticsearch.ssl.key: /path/to/your/client.key
 
