Add plugins support for jellyfin and enable anime plugin

--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -543,6 +543,9 @@ watchers:
       - ^[0-9]+\.[0-9]+\.[0-9]+-amd64$
     excludes:
       - ^10\.[0-4]\..*
+  - type: github_tag
+    repo: jellyfin/jellyfin-plugin-anime
+    tag: {{ jellyfin.plugins.anime.version }}
   
   ##############
   # Apps : Web #
