Configure jellyfin context root

--- a/ansible/install_applications/roles/stream-jellyfin.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/stream-jellyfin.deploy/app/deploy/statefulSet.yaml.j2
@@ -56,7 +56,7 @@ spec:
         readinessProbe:
           httpGet:
             scheme: HTTP
-            path: /
+            path: {{ jellyfin.context_path }}
             port: jellyfin
           initialDelaySeconds: 3
           periodSeconds: 5
