--- a/ansible/install_applications/roles/stream-jellyfin.deploy/app/config/system.xml.j2
+++ b/ansible/install_applications/roles/stream-jellyfin.deploy/app/config/system.xml.j2
@@ -10,6 +10,7 @@
   <IsPortAuthorized>true</IsPortAuthorized>
   <AutoRunWebApp>true</AutoRunWebApp>
   <EnableRemoteAccess>true</EnableRemoteAccess>
+  <BaseUrl>{{ jellyfin.context_path }}</BaseUrl>
   <RequireHttps>false</RequireHttps>
   <IsBehindProxy>true</IsBehindProxy>
 </ServerConfiguration>
