--- a/ansible/install_applications/roles/stream-jellyfin.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/stream-jellyfin.deploy/app/deploy/ingress.yaml.j2
@@ -6,8 +6,6 @@ metadata:
   labels:
     {{ jellyfin.labels_def | to_nice_yaml() | indent(4) }}
     {{ jellyfin.labels_desc | to_nice_yaml() | indent(4) }}
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
 spec:
   tls:
     - hosts:
@@ -17,7 +15,7 @@ spec:
   - host: stream.{{ web_base_domain }}
     http:
       paths:
-        - path: {{ jellyfin.context_path }}/?(.*)
+        - path: {{ jellyfin.context_path }}
           backend:
             serviceName: jellyfin
             servicePort: 80
