Add and configure ldap auth for jellyfin

--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -557,6 +557,9 @@ watchers:
   - type: github_tag
     repo: jellyfin/jellyfin-plugin-anime
     tag: {{ jellyfin.plugins.anime.version }}
+  - type: github_tag
+    repo: jellyfin/jellyfin-plugin-ldapauth
+    tag: {{ jellyfin.plugins.ldapauth.version }}
   
   ##############
   # Apps : Web #
