--- a/ansible/install_applications/roles/stream-jellyfin.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/stream-jellyfin.deploy/app/deploy/statefulSet.yaml.j2
@@ -43,6 +43,21 @@ spec:
         - name: jellyfin-pv-claim
           mountPath: /config-target
           subPath: config
+      - name: inject-certificate
+        image: "{{ jellyfin.conf_injection_container.image }}"
+        imagePullPolicy: Always
+        command:
+          - "sh"
+          - "-c"
+          - |
+            cp /etc/ssl/certs/ca-certificates.crt /tmp-cert
+            cat /etc/ssl/cluster/ca.crt >> /tmp-cert/ca-certificates.crt
+        volumeMounts:
+        - name: cluster-ca-volume
+          mountPath: /etc/ssl/cluster/ca.crt
+          subPath: ca.crt
+        - name: tmp-cert-volume
+          mountPath: /tmp-cert
       containers:
       - image: "{{ jellyfin.container.image }}"
         name: jellyfin
@@ -75,6 +90,9 @@ spec:
           subPath: config
         - name: jellyfin-multimedia
           mountPath: /media
+        - name: tmp-cert-volume
+          mountPath: /etc/ssl/certs/ca-certificates.crt
+          subPath: ca-certificates.crt
         - name: tmp-volume
           mountPath: /tmp
       volumes:
@@ -87,7 +105,12 @@ spec:
       - name: jellyfin-multimedia
         persistentVolumeClaim:
           claimName: nfs-multimetia
+      - name: cluster-ca-volume
+        secret:
+          secretName: cluster-ca
       - name: tmp-volume
+        emptyDir: {}
+      - name: tmp-cert-volume
         emptyDir: {}
       nodeSelector:
         capability/general-purpose: 'yes'
