--- a/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/dashboard.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/dashboard.yaml.j2
@@ -252,7 +252,7 @@ spec:
           emptyDir: {}
       serviceAccountName: kubernetes-dashboard
       nodeSelector:
-        "beta.kubernetes.io/os": linux
+        "kubernetes.io/os": linux
         capability/general-purpose: 'yes'
       # Comment the following tolerations if Dashboard must not be deployed on master
       tolerations:
@@ -302,7 +302,7 @@ spec:
     spec:
       containers:
         - name: dashboard-metrics-scraper
-          image: "{{ kubernetes_dashboard_metrics_scraper.container.image }}"
+          image: kubernetesui/metrics-scraper:v1.0.4
           imagePullPolicy: Always
           ports:
             - name: http
@@ -340,7 +340,7 @@ spec:
             runAsGroup: 2001
       serviceAccountName: kubernetes-dashboard
       nodeSelector:
-        "beta.kubernetes.io/os": linux
+        "kubernetes.io/os": linux
         capability/general-purpose: 'yes'
       # Comment the following tolerations if Dashboard must not be deployed on master
       tolerations:
