--- a/ansible/install_infra/roles/kubernetes-infra/app/ingress-nginx/deploy/configMap-udp.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes-infra/app/ingress-nginx/deploy/configMap-udp.yaml.j2
@@ -1,7 +1,7 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: udp-services
+  name: ingress-nginx-udp-services
   namespace: ingress-nginx
   labels:
     app.kubernetes.io/name: ingress-nginx
