--- a/ansible/install_infra/roles/kubernetes-infra/app/ingress-nginx/deploy/configMap-tcp.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes-infra/app/ingress-nginx/deploy/configMap-tcp.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: tcp-services
+  name: ingress-nginx-tcp-services
   namespace: ingress-nginx
   labels:
     app.kubernetes.io/name: ingress-nginx
