--- a/ansible/install_infra/roles/kubernetes-infra/app/ingress-nginx/deploy/service-nodeport.yaml.j2
+++ b/ansible/install_infra/roles/kubernetes-infra/app/ingress-nginx/deploy/service-nodeport.yaml.j2
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ingress-nginx
-  namespace: ingress-nginx
   labels:
     app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx
+    app.kubernetes.io/version: 0.31.1
+    app.kubernetes.io/component: controller
+  name: ingress-nginx-controller
+  namespace: ingress-nginx
 spec:
   type: NodePort
   ports:
@@ -13,23 +15,24 @@ spec:
     - name: http
       port: 80
       nodePort: {{ kubernetes_nginx_ingress_http_port }}
-      targetPort: 80
       protocol: TCP
+      targetPort: http
 {% endif %}
 {% if kubernetes_nginx_ingress_https_port | default(false) %}
     - name: https
       port: 443
       nodePort: {{ kubernetes_nginx_ingress_https_port }}
-      targetPort: 443
       protocol: TCP
+      targetPort: https
 {% endif %}
 {% if kubernetes_nginx_ingress_mqtt_port | default(false) %}
     - name: mqtt
       port: 1883
       nodePort: {{ kubernetes_nginx_ingress_mqtt_port }}
-      targetPort: 1883
       protocol: TCP
+      targetPort: 1883
 {% endif %}
   selector:
     app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx
+    app.kubernetes.io/component: controller
