--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -138,7 +138,7 @@ watchers:
     repo: {{ sabnzbd.repo.name }}
     release: {{ sabnzbd.repo.version }}
     excludes:
-      - .*(RC|Beta).*
+      - .*(RC|Alpha|Beta).*
   - name: SABnzbd par2cmdline
     type: github_release
     repo: {{ sabnzbd.par2cmdline.repo.name }}
