--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -157,6 +157,9 @@ watchers:
     excludes:
       - .*-alpine3\.[0-9]$
       - .*-alpine3\.10
+  - type: github_tag
+    repo: SickChill/SickChill
+    tag: {{ sickchill.version }}
   
   ###############
   # Apps : Home #
