Fix calico watcher

--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -53,6 +53,8 @@ watchers:
   - type: github_release
     repo: projectcalico/calico
     release: v3.13.3
+    excludes:
+      - v3\.1[0-2]\..*
 
 
   ###############
