--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/networkPolicies.yaml.j2
@@ -16,7 +16,7 @@ spec:
   ingress:
     # Allow from prometheus
     - ports:
-        - port: http
+        - port: https
       from:
         - namespaceSelector:
             matchLabels:
