--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
@@ -36,6 +36,7 @@ spec:
   nodeSelector:
     kubernetes.io/os: linux
     capability/general-purpose: 'yes'
+  podMonitorNamespaceSelector: {}
   podMonitorSelector: {}
   replicas: 1
   externalUrl: https://infra.{{ web_base_domain }}/prometheus/
