--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/prometheus-operator.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/prometheus-operator.yaml.j2
@@ -8,9 +8,13 @@ metadata:
     {{ prometheus_operator.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   endpoints:
-  - honorLabels: true
-    port: http
+  - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
+    honorLabels: true
     interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
+    port: https
+    scheme: https
+    tlsConfig:
+      insecureSkipVerify: true
   selector:
     matchLabels:
       prometheus-target: prometheus-operator
