--- a/ansible/install_applications/roles/web-ttrss.deploy/app/config/config.php.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/config/config.php.j2
@@ -174,7 +174,7 @@
 	// if you experience weird errors and tt-rss failing to start, blank pages
 	// after login, or content encoding errors, disable it.
 
-	define('PLUGINS', 'auth_ldap, note, mailer_smtp');
+	define('PLUGINS', 'data_migration, auth_ldap, note, mailer_smtp');
 	// Comma-separated list of plugins to load automatically for all users.
 	// System plugins have to be specified here. Please enable at least one
 	// authentication plugin here (auth_*).
