Fix letsencrypt deploy to slaves

--- a/ansible/install_infra/roles/nginx/templates/deploy_letsencrypt_certs.sh.j2
+++ b/ansible/install_infra/roles/nginx/templates/deploy_letsencrypt_certs.sh.j2
@@ -3,7 +3,7 @@
 function handleRemoteHost() {
     remoteHost="$1"
     echo " - remote : $remoteHost"
-    rsync -arv --delete /etc/letsencrypt $remoteHost:/etc/letsencrypt
+    rsync -arv --delete /etc/letsencrypt/ $remoteHost:/etc/letsencrypt
     ssh $remoteHost "systemctl reload nginx"
 }
 
