Fix infra-unifi missing tmp dir

--- a/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-unifi.deploy/app/deploy/statefulSet.yaml.j2
@@ -86,10 +86,14 @@ spec:
           readOnly: true
         - name: unifi-pv-claim
           mountPath: /unifi
+        - name: tmp-volume
+          mountPath: /tmp
       volumes:
       - name: tz-config
         hostPath:
           path: /etc/localtime
+      - name: tmp-volume
+        emptyDir: {}
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
