Fix missings sickchill api_key in nzbToMedia

--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/config/autoProcessMedia_delta.cfg.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/config/autoProcessMedia_delta.cfg.j2
@@ -11,7 +11,7 @@
         enabled = {{ category_config.enabled }}
         host = {{ category_config.host }}
         port = {{ category_config.port }}
-        apikey = {{ category_config.apikey | default("") }}
+        apikey = {{ category_config.api_key | default("") }}
         username = {{ category_config.username | default("") }}
         password = {{ category_config.password | default("") }}
         ###### ADVANCED USE - ONLY EDIT IF YOU KNOW WHAT YOU'RE DOING ######
