Move post hook script

--- a/ansible/install_infra/roles/nginx/templates/letsencrypt/post_hook.sh.j2
+++ b/ansible/install_infra/roles/nginx/templates/letsencrypt/post_hook.sh.j2
@@ -4,7 +4,7 @@ function handleRemoteHost() {
     remoteHost="$1"
     echo " - remote : $remoteHost"
     rsync -arv --delete /etc/letsencrypt/ $remoteHost:/etc/letsencrypt
-    ssh $remoteHost "systemctl reload nginx"
+    ssh $remoteHost "systemctl restart nginx"
 }
 
 function handleLocalHost() {
