Use a dedicated NGinx configuration for letsencrypt

--- a/ansible/install_infra/roles/nginx/templates/letsencrypt/post_hook.sh.j2
+++ b/ansible/install_infra/roles/nginx/templates/letsencrypt/post_hook.sh.j2
@@ -4,12 +4,16 @@ function handleRemoteHost() {
     remoteHost="$1"
     echo " - remote : $remoteHost"
     rsync -arv --delete /etc/letsencrypt/ $remoteHost:/etc/letsencrypt
+    echo "restarting nginx ..."
     ssh $remoteHost "systemctl restart nginx"
 }
 
 function handleLocalHost() {
     echo " - local"
-    systemctl reload nginx
+    rm /etc/systemd/system/nginx.service.d/10-bootstrap_letsencrypt.conf
+    systemctl daemon-reload
+    echo "restarting nginx ..."
+    systemctl restart nginx
 }
 
 handleLocalHost
