--- a/ansible/install_applications/roles/infra-pihole.deploy/app/config/05-custom.conf.j2
+++ b/ansible/install_applications/roles/infra-pihole.deploy/app/config/05-custom.conf.j2
@@ -5,3 +5,6 @@
 # or if you want it to read another file, as well as /etc/hosts, use
 # this.
 addn-hosts=/etc/dnsmasq_hosts
+
+# Resolve Kubernetes services
+server=/cluster.local/10.96.0.10
