Allow access to the LAN for wireguard clients

--- a/ansible/install_infra/roles/wireguard/templates/interface.conf.j2
+++ b/ansible/install_infra/roles/wireguard/templates/interface.conf.j2
@@ -5,6 +5,9 @@ PrivateKey = {{ lookup('file', wireguard.server.keys_dir + '/private.key') }}
 Address = {{ wireguard.cidr_prefix }}.1/24
 ListenPort = {{ wireguard.server.listen_port }}
 
+PostUp   = iptables -A FORWARD -i {{ wireguard.server.interface }} -j ACCEPT; iptables -A FORWARD -o {{ wireguard.server.interface }} -j ACCEPT; iptables -t nat -A POSTROUTING -o {{ wireguard.server.lan_interface }} -j MASQUERADE
+PostDown = iptables -D FORWARD -i {{ wireguard.server.interface }} -j ACCEPT; iptables -D FORWARD -o {{ wireguard.server.interface }} -j ACCEPT; iptables -t nat -D POSTROUTING -o {{ wireguard.server.lan_interface }} -j MASQUERADE
+
 {% for client in wireguard.clients | dict2items %}
 # Client "{{ client.key }}"
 [Peer]
