--- a/ansible/install_infra/roles/wireguard/templates/client.conf.j2
+++ b/ansible/install_infra/roles/wireguard/templates/client.conf.j2
@@ -3,7 +3,7 @@
 [Interface]
 PrivateKey = {{ lookup('file', wireguard.server.clients_dir + '/' + item.key + '/private.key') }}
 Address = {{ wireguard.cidr_prefix }}.{{ item.value.ip_suffix }}/32
-DNS = {{ groups['dns_servers'] | map('extract', hostvars, ['ansible_host']) | join(',') }}
+DNS = {{ wireguard.clients_dns | join(',') }}
 
 [Peer]
 PublicKey = {{ lookup('file', wireguard.server.keys_dir + '/public.key') }}
